# cpp_requests

./: .gitmodules  README.md
.github/: CODEOWNERS  dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci-cpp.yml  codeql-analysis.yml  lint.yml  publish.yml  run-tests.yml
plans/: requests_cpp_plan.md
requests_cpp/: CMakeLists.txt  conanfile.py  vcpkg.json
requests_cpp/build_support/: nghttp2_win_compat.h
requests_cpp/docs/: api_documentation.md  user_manual.md
requests_cpp/examples/: advanced_auth_proxy_example.cpp  advanced_features_example.cpp  decode_chain_smoke.cpp  http1_chunked_trailers_decode.cpp  http2_smoke.cpp  proxy_tunnel_example.cpp  tls_enhanced_example.cpp
requests_cpp/include/requests_cpp/: adapter.hpp  api.hpp  auth.hpp  connection_pool.hpp  cookie.hpp  exceptions.hpp  export.hpp  http1.hpp  http2.hpp  http2_smoke.hpp  md5.hpp  ntlm.hpp  proxy.hpp  proxy_tunnel.hpp  request.hpp  response.hpp  retry.hpp  session.hpp  streaming.hpp  system_certs.hpp  tls.hpp  tls_enhanced.hpp  types.hpp  url.hpp
requests_cpp/scripts/: pem_to_header.py
requests_cpp/src/: adapter.cpp  api.cpp  auth.cpp  connection_pool.cpp  connection_pool.hpp  cookie.cpp  exceptions.cpp  http1.cpp  http1_adapter.cpp  http2_adapter.cpp  http2_smoke.cpp  md5.cpp  ntlm.cpp  proxy.cpp  proxy_tunnel.cpp  request.cpp  response.cpp  retry.cpp  root_certs.hpp  session.cpp  streaming.cpp  system_certs.cpp  tls_connection_pool.cpp  tls_connection_pool.hpp  tls_enhanced.cpp  tls_macos.cpp  tls_stub.cpp  url.cpp
requests_cpp/tests/: performance_tests.cpp  proxy_tunnel_test.cpp  unit_tests.cpp
